Delete compiled JS from examples

--- a/examples/basic/three_example.html
+++ b/examples/basic/three_example.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.js"></script> -->
-		<script src="_vendor/three.js"></script>
+		<script src="../_vendor/three.js"></script>
 		<script src="basic.js"></script>
 	</body>
 </html>
